# OS_sem3

./: LICENSE  README.md
lw1/: main.sh
lw2/: os-lr2-individual-2.cpp  os-lr2-invidual.cpp  os-lr2.cpp
lw3/: .gitignore  CMakeLists.txt  main.c  main_fork.c  main_pthread.c
lw4/MemoryManager/: MemoryManager.sln  README.md
lw4/MemoryManager/MemoryManager/: MemoryManager.cpp  MemoryManager.vcxproj  MemoryManager.vcxproj.filters
lw4/MemoryManager/MemoryManagerTests/: ListTests.cpp  MemoryManagerTests.cpp  MemoryManagerTests.vcxproj  PageTests.cpp
lw4/report/: ~$ЛР4 ос.docx  ~WRL0853.tmp  ЛР4 ос.docx
lw5/: CMakeLists.txt
lw5/include/: file_system.h  memory_manager.h
lw5/src/: file_system.cc  memory_manager.cc
lw5/tests/: file_system_tests.cc  memory_manager_tests.cc
